--- a/.env
+++ b/.env
@@ -16,12 +16,8 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=fb878a3960721a53413c0e3ebb981388
+APP_SECRET=c9045c6e77bdb56b02401d4ccf8d4dbe
 ###< symfony/framework-bundle ###
-
-###> symfony/webapp-pack ###
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
-###< symfony/webapp-pack ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
@@ -32,6 +28,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
+
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
@@ -39,6 +39,7 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&ch
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
 
-###> symfony/mailer ###
-# MAILER_DSN=null://null
-###< symfony/mailer ###
+HTTPS_PORT=1443
+
+#comment out in order to use xdebug
+XDEBUG_MODE=off
